Update to Spring Boot 3.5.4 and Java 23